# yapp

./: .gitlab-ci.yml  README.md  mkdocs.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py
docs/: index.md  requirements.txt
src/yapp/: __init__.py  cmd.py  family_phaser.py  fphtrain.py  mendel.py  origins.py  recombination.py  vcf.py  wcsp.py
test/data/: dummy.fam  dummy.vcf.gz.tbi
test/pytoulbar2/: data.json  phasing.py
yapp/: __init__.py  family_phaser.py  gamete.py  lmm.py  mendel.py  origins.py  pedigree.py  recombination.py  sperm.py  vcf.py  wcsp.py
